prevent text overflow

--- a/client/coral-ui/components/PopupMenu.css
+++ b/client/coral-ui/components/PopupMenu.css
@@ -1,7 +1,8 @@
 .popupMenu {
+  white-space: normal;
   display: block;
   position: absolute;
-  width: 100%;
+  width: 98%;
   border: solid 1px #999;
   box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
@@ -9,7 +10,7 @@
   border-radius: 3px;
   padding: 20px 10px;
   z-index: 300;
-  left: 0;
+  left: 1%;
 }
 
 .popupMenu:before{
